Final Changes for the Hackathon! Changes to UI, Comments, and Updates to Jupyter with Documentation.

--- a/agriculture-front-end/public/manifest.json
+++ b/agriculture-front-end/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Crop AI",
+  "name": "Find the best crop to plant on your land",
   "icons": [
     {
       "src": "favicon.ico",
